# NEMO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
Images/: CMakeLists.txt
Plugin/Plugin/: Plugin.jucer
Plugin/Plugin/Builds/VisualStudio2022/: Plugin.sln  Plugin_SharedCode.vcxproj  Plugin_SharedCode.vcxproj.filters  Plugin_StandalonePlugin.vcxproj  Plugin_StandalonePlugin.vcxproj.filters  Plugin_VST3.vcxproj  Plugin_VST3.vcxproj.filters
Plugin/Plugin/JuceLibraryCode/: JucePluginDefines.h
Plugin/Plugin/Source/: AmpOSCReceiver.h  CustomKnob.cpp  CustomKnob.h  Delay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Source/: PluginProcessor.cpp  PluginProcessor.h  RT_LSTM.cpp  RT_LSTM.h
Test/: CMakeLists.txt
Test/Result/: makeplot.py  output(Conv).txt  output(GRU).txt  output(LSTM).txt
Test/src/: main.cpp
src/: data.py  evaluate.py  loss.py  miscfuncs.py  models.py  train.py  train_lfo.py  utils_train.py
